cluster/apps/wordpress-test/mariadb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: mariadb
  type: LoadBalancer
  loadBalancerIP: 192.168.178.128
  ports:
    - port: 3306
