cluster/apps/wordpress-test/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: wordpress-test
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
      annotations:
        field.cattle.io/workloadMetrics: '[{"path":"/metrics","port":9104,"schema":"HTTP"}]'
    spec:
      containers:
        - name: mariadb
          #image: mariadb:10.4
          image: tobi312/rpi-mariadb:10.5
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          command: ["/bin/sh", "-c", "echo \"SET GLOBAL time_zone = '$(TZ)'; SET time_zone = '$(TZ)'; SELECT CURRENT_TIME; CREATE USER IF NOT EXISTS 'exporter'@'%' IDENTIFIED BY '$(MYSQL_EXPORTER_PASSWORD)' WITH MAX_USER_CONNECTIONS 3; GRANT PROCESS, REPLICATION CLIENT, SELECT ON *.* TO 'exporter'@'%'; \" > /docker-entrypoint-initdb.d/init.sql; /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"]
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=$MYSQL_USER --password=$MYSQL_PASSWORD || exit 1"]
            #tcpSocket:
            #  port: 3306
            initialDelaySeconds: 15
            periodSeconds: 120
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=$MYSQL_USER --password=$MYSQL_PASSWORD || exit 1"]
            #tcpSocket:
            #  port: 3306
            initialDelaySeconds: 30
            periodSeconds: 120
            timeoutSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1.0"
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mariadb-data
          - name: mariadb-db-file-config
            mountPath: /etc/mysql/mariadb.conf.d/99-my.cnf
            subPath: 99-my.cnf
        - name: exporter
          image: prom/mysqld-exporter
          imagePullPolicy: Always
          ports:
          - containerPort: 9104
          args: ["--web.listen-address", ":9104", "--web.telemetry-path", "/metrics"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.5"
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
        - name: mariadb-db-file-config
          configMap:
            name: mariadb-db-file-config

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress-test
  labels:
    app: mariadb
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip
  ports:
    - name: "mariadb"
      protocol: TCP
      port: 3306
      targetPort: 3306
      #nodePort: 3306
    - name: "mariadb-exporter"
      protocol: TCP
      port: 9104
      targetPort: 9104
  selector:
    app: mariadb
