cluster/apps/wordpress-test/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-test
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
  ports:
    - port: 80
