cluster/apps/wordpress-test/wordpress-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-test-local-ingressroute
  namespace: wordpress-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wordpress-test.${SECRET_DOMAIN_LOCAL}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
